Pagination: fixed bug with too long pagination

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -595,3 +595,12 @@ div .fa-1 {
 div .fa-05 {
     font-size: 0.5em;
 }
+
+/*
+ |------------------------------------------------------------------------------
+ | Paginator
+ |------------------------------------------------------------------------------
+ */
+.paginator {
+    text-align: center;
+}
